Defining service, controller for list customers's types
